# bridgitte

./: .gitignore  Cargo.toml  Justfile  README.md  shell.nix
.github/workflows/: rust.yml
src/: analyze.rs  bits.rs  cards.rs  counter.rs  lib.rs  main.rs  minmax.rs  observers.rs  play.rs  search.rs  trans_table.rs  ui.rs
