[package]
name = "bridgitte"
version = "0.1.3"
edition = "2021"
license = "GPL-3.0"
description = "Contract bridge double dummy solver"
rust-version = "1.83.0"

[dependencies]
static_assertions = "1"
scopeguard = "1"
quick_cache = "0"
clap = { version = "4", features = ["derive"] }
regex = "1"
rayon = "1"
ratatui = "0"
rand = "0.8.5"

[profile.release]
# gives ~3% boost
codegen-units = 1
# debug symbols for profiling
debug = 2
